# TheFlightCrew

./: .gitignore  README.md
Airline Processing/: Airline.cpp  Airline.h  CMakeLists.txt  Processor.cpp  Processor.h  SplayTree.cpp  main.cpp
NoRoomForAiror SFML/: .clang-format  Airline.cpp  CMakeLists.txt  TextBox.h  main.cpp
Project 3 Testing/: CMakeLists.txt  TextBox.h  edgecases.txt  main.cpp
data_processing/: data_processing_script.py  missNotes.txt  misses.csv
